<resources>
    <string name="app_name">MoneEZ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MoneEz</string>
    <string name="nav_header_subtitle">Money management made EaZy</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_accounts">Accounts</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_settings">Settings</string>

    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_account_detail">Account detail</string>

    <string name="account">Account</string>
    <string name="transaction">Transaction</string>

    <string name="regular_account">Regular account</string>
    <string name="cash_account">Cash</string>
    <string name="savings_account">Savings account</string>
    <string name="income">Income</string>
    <string name="spending">Spending</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="cash_out">Cash out</string>
    <string name="account_type">Account type</string>
    <string name="account_name">Account name</string>
    <string name="account_value">Value</string>
    <string name="save">Save</string>
    <string name="name_required">Name *</string>
    <string name="initial_balance">Initial balance</string>
    <string name="description">Description</string>
    <string name="interest">Interest</string>
    <string name="currency_required">* Currency</string>
    <string name="color">Color</string>
    <string name="icon">Icon</string>
    <string name="amount_required">Amount *</string>
    <string name="received_amount">Received amount</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="recipient">Recipient</string>
    <string name="category_name">Category name</string>
    <string name="transaction_name">Transaction name</string>
    <string name="add_income">+ Income</string>
    <string name="add_spending">+ Spending</string>
    <string name="choose_account">Choose account</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="initial_int_value">0</string>
    <string name="initial_float_value">0.0</string>

    <string name="new_">New </string>
    <string name="select_icon">Select icon</string>
    <string name="new_category">New category</string>
    <string name="select_currency">Select currency</string>
    <string name="select_category">Select category</string>
    <string name="select_account">Select account</string>
    <string name="name_empty_error">Name can\'t be empty</string>
    <string name="amount_empty_error">Amount can\'t be empty</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="delete_account_alert">Are you sure you want to delete this account?</string>
    <string name="delete_transaction_alert">Are you sure you want to delete this transaction?</string>
    <string name="no_account_alert">You don\'t have any other account to transfer money to.</string>
    <string name="unsaved_changes_alert">You have unsaved changes. Do you want to keep editing?</string>

    <string name="not_saved"> not saved</string>
    <string name="saved"> saved</string>
    <string name="not_updated"> not updated</string>
    <string name="updated"> updated</string>
    <string name="keep_editing">Keep editing</string>
    <string name="discard">Discard</string>
    <string name="repeat">Repeat</string>
</resources>
