<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".AccountDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            >

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ToolbarTheme"/>

    </com.google.android.material.appbar.AppBarLayout>

    <!--TODO scrolling -->
    <!--TODO top gap -->

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:fillViewport="true"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textAlignment="center"
                      android:textAllCaps="true"
                      android:text="@string/account_type"
                      style="@style/TextAppearance.MaterialComponents.Caption"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:id="@+id/account_type"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textAlignment="center"
                      style="@style/TextAppearance.MaterialComponents.Headline5"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/account_type"
                      android:text="@string/account_name"
                      android:id="@+id/account_name"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textAlignment="center"
                      android:paddingTop="16dp"
                      android:paddingBottom="26dp"
                      style="@style/TextAppearance.MaterialComponents.Headline3"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/account_name"
                      android:text="@string/account_value"
                      android:id="@+id/account_value"/>

            <include
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/account_value"
                    app:layout_constraintBottom_toBottomOf="parent"
                    layout="@layout/content_account_detail"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.leinardi.android.speeddial.SpeedDialView
            android:id="@+id/speedDial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>